--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.10.6",
     "framer-motion": "^9.0.4",
     "next": "13.1.6",
+    "next-auth": "^4.20.1",
     "pg": "^8.9.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
